# wikiforge

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: archive.md  audit.md  changelog.md  collect.md  compile.md  context.md  dataset.md  export.md  feedback.md  generate.md  impact.md  ingest.md  init.md  lint.md  query.md  refresh.md  related.md  research.md  seed-project.md  stats.md  thesis.md  wiki-note.md
docs/: ARCHITECTURE.md  GUIDE-en.md  PLUGIN.md
hooks/: hooks.json  viewer-autostart.sh
tests/: conftest.py  test_activity.py  test_anthropic_provider.py  test_attach_cli.py  test_audit_impact.py  test_auditor.py  test_canonical.py  test_capture_cli.py  test_capture_config.py  test_capture_event.py  test_capture_flush.py  test_capture_index.py  test_capture_parsing.py  test_capture_precompact.py  test_capture_render.py  test_capture_service.py  test_capture_subagent.py  test_capture_watermark.py  test_capture_wiring.py  test_changelog_build.py  test_changelog_cli.py  test_changelog_federated.py  test_changelog_range.py  test_changelog_render.py  test_chunking.py  test_claude_code_provider.py  test_cli_init.py  test_cli_smoke.py  test_compile_digest.py  test_compiler.py  test_confidence.py  test_config.py  test_consolidate.py  test_cost.py  test_dev_event_routing.py  test_embedding_cache.py  test_embedding_providers.py  test_exporter.py  test_extract_federated.py  test_federation_compat.py  (+57 more)
viewer/: build.gradle  settings.gradle
wikiforge/: __init__.py  paths.py  services.py
(+227 files in other folders)
