[project]
name = "wikiforge"
version = "0.2.0"
description = "Local-first, tool-agnostic personal knowledge base compiler"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75",
    "fastmcp>=3.4",
    "typer>=0.15",
    "rich>=13.9",
    "aiosqlite>=0.21",
    "aiosql>=13.3",
    "sqlite-vec>=0.1.6",
    "httpx>=0.28",
    "tenacity>=9.0",
    "trafilatura>=2.0",
    "pymupdf>=1.25",
    "sentence-transformers>=3.4",
    "pydantic>=2.10",
    "jinja2>=3.1",
    "fastembed>=0.8.0",
]

[project.scripts]
wiki = "wikiforge.cli.app:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
untyped_calls_exclude = ["pymupdf"]

[[tool.mypy.overrides]]
module = "sqlite_vec"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastembed.*"
ignore_missing_imports = true
